feat: update stack references and add API Gateway + CloudFront templates
Step 2 of infrastructure migration - Update references and add new templates

Changes:
- Update master-template.yaml with new directory paths (core/ and services/)
- Create comprehensive API Gateway template with Lambda integrations
  - Full CORS support with OPTIONS methods
  - All dashboard, workflow, opportunities, and reports endpoints
  - Lambda permissions for API Gateway invocation
- Create CloudFront distribution template with proper OAI
  - Origin Access Identity for secure S3 bucket access
  - S3 bucket policy for CloudFront OAI
  - SPA support with custom error responses (403/404 → index.html)
  - CloudWatch alarms for 4xx/5xx errors
  - Optional custom domain and ACM certificate support
- Update deploy-infra.sh for nested stack deployment
  - Auto-create S3 bucket for CloudFormation templates
  - Upload templates to S3 before deployment
  - Deploy master stack with all parameters
  - Optional API Gateway and CloudFront deployment
- Update publish-outputs.sh to extract master stack outputs
  - Consolidated output file with all infrastructure details
  - API Gateway, CloudFront, S3, SQS, Lambda, KMS outputs
  - JSON format for easy consumption by service repos

All templates reference rfp-contracts OpenAPI specifications and follow
AWS best practices with proper CORS, security, and monitoring.

--- a/cloudformation/core/master-template.yaml
+++ b/cloudformation/core/master-template.yaml
@@ -47,7 +47,7 @@ Resources:
   MainInfrastructureStack:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}main-template.yaml'
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}core/main-template.yaml'
       Parameters:
         Environment: !Ref Environment
         SamApiKey: !Ref SamApiKey
@@ -65,7 +65,7 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: MainInfrastructureStack
     Properties:
-      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}dynamodb-tables.yaml'
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}services/dynamodb-tables.yaml'
       Parameters:
         Environment: !Ref Environment
         BucketPrefix: !Ref BucketPrefix
@@ -82,7 +82,7 @@ Resources:
       - MainInfrastructureStack
       - DynamoDbTablesStack
     Properties:
-      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}lambda-functions.yaml'
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}services/lambda-functions.yaml'
       Parameters:
         Environment: !Ref Environment
         SamApiKey: !Ref SamApiKey
@@ -102,7 +102,7 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: LambdaFunctionsStack
     Properties:
-      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}eventbridge-rules.yaml'
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}services/eventbridge-rules.yaml'
       Parameters:
         Environment: !Ref Environment
         SamGovDailyDownloadFunctionArn: !GetAtt LambdaFunctionsStack.Outputs.SamGovDailyDownloadFunctionArn
@@ -120,7 +120,7 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: LambdaFunctionsStack
     Properties:
-      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}s3-bucket-policies.yaml'
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}services/s3-bucket-policies.yaml'
       Parameters:
         Environment: !Ref Environment
         SqsSamJsonMessagesQueueArn: !GetAtt MainInfrastructureStack.Outputs.SqsSamJsonMessagesQueueArn
@@ -136,7 +136,7 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: LambdaFunctionsStack
     Properties:
-      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}iam-security-policies-simple.yaml'
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}core/iam-security-policies-simple.yaml'
       Parameters:
         Environment: !Ref Environment
         BucketPrefix: !Ref BucketPrefix
@@ -151,7 +151,7 @@ Resources:
     Type: AWS::CloudFormation::Stack
     DependsOn: LambdaFunctionsStack
     Properties:
-      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}monitoring-alerting.yaml'
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}services/monitoring-alerting.yaml'
       Parameters:
         Environment: !Ref Environment
         AlertEmail: !Ref CompanyContact
@@ -170,7 +170,7 @@ Resources:
       - S3BucketPoliciesStack
       - IAMSecurityPoliciesStack
     Properties:
-      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}s3-event-notifications.yaml'
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}services/s3-event-notifications.yaml'
       Parameters:
         Environment: !Ref Environment
         SqsSamJsonMessagesQueueArn: !GetAtt MainInfrastructureStack.Outputs.SqsSamJsonMessagesQueueArn
