feat: add CloudFront distribution deployment to infrastructure
- Add UI bucket creation to main-template.yaml
- Add CloudFront UI stack to master-template.yaml with OAI and bucket policy
- Update deploy-infra.sh to use update-stack for existing stacks
- Improve template sync to upload all files with --delete flag
- Display CloudFront URL after successful deployment
- Export CloudFront distribution ID and URL as stack outputs

--- a/cloudformation/core/main-template.yaml
+++ b/cloudformation/core/main-template.yaml
@@ -173,6 +173,29 @@ Resources:
             Status: Enabled
             ExpirationInDays: 90
 
+  # UI Bucket for React Application
+  UiBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !If 
+        - HasBucketPrefix
+        - !Sub '${BucketPrefix}-ui-${Environment}'
+        - !Sub 'rfp-ui-${Environment}'
+      BucketEncryption:
+        ServerSideEncryptionConfiguration:
+          - ServerSideEncryptionByDefault:
+              SSEAlgorithm: AES256
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
+      Tags:
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Project
+          Value: 'AI-RFP-Response-Agent'
+
   # SQS Queue with Dead Letter Queue
   SqsSamJsonMessagesDeadLetterQueue:
     Type: AWS::SQS::Queue
@@ -222,3 +245,9 @@ Outputs:
     Value: !GetAtt SqsSamJsonMessagesQueue.Arn
     Export:
       Name: !Sub '${AWS::StackName}-SqsSamJsonMessagesQueueArn'
+  
+  UiBucketName:
+    Description: 'Name of the UI bucket'
+    Value: !Ref UiBucket
+    Export:
+      Name: !Sub '${AWS::StackName}-UiBucket'
