feat: configure UI bucket for CloudFront distribution
- Update UI bucket to work with CloudFront Origin Access Identity
- Set PublicAccessBlockConfiguration to allow bucket policy for CloudFront
- Re-enable CloudFrontUIStack in master template
- Add CloudFront distribution ID and URL outputs
- Remove website hosting configuration (using CloudFront instead)

--- a/cloudformation/core/main-template.yaml
+++ b/cloudformation/core/main-template.yaml
@@ -173,7 +173,7 @@ Resources:
             Status: Enabled
             ExpirationInDays: 90
 
-  # UI Bucket for React Application
+  # UI Bucket for React Application (CloudFront Origin)
   UiBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -187,9 +187,9 @@ Resources:
               SSEAlgorithm: AES256
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
-        BlockPublicPolicy: true
+        BlockPublicPolicy: false
         IgnorePublicAcls: true
-        RestrictPublicBuckets: true
+        RestrictPublicBuckets: false
       Tags:
         - Key: Environment
           Value: !Ref Environment
