--- a/cloudformation/services/s3-event-notifications.yaml
+++ b/cloudformation/services/s3-event-notifications.yaml
@@ -13,16 +13,10 @@ Parameters:
   
   BucketPrefix:
     Type: String
-    Default: ''
-    Description: 'Optional prefix for S3 bucket names to avoid conflicts'
-
-Conditions:
-  HasBucketPrefix: !Not [!Equals [!Ref BucketPrefix, '']]
+    Default: 'rfp-han-dev'
+    Description: 'Prefix for S3 bucket names'
 
 Resources:
-  # S3 Bucket Notification Configurations
-  # Note: Using custom resources to configure notifications on existing buckets
-  
   # SQS Queue Policy to allow S3 to send messages
   SqsQueuePolicy:
     Type: AWS::SQS::QueuePolicy
@@ -42,8 +36,8 @@ Resources:
             Condition:
               ArnLike:
                 aws:SourceArn: !Sub 'arn:aws:s3:::${BucketPrefix}-sam-extracted-json-resources-${Environment}'
-  
-  # Custom resource Lambda for configuring S3 notifications
+
+  # IAM Role for Lambda that configures S3 notifications
   S3NotificationConfiguratorRole:
     Type: AWS::IAM::Role
     Properties:
@@ -71,6 +65,7 @@ Resources:
                   - !Sub 'arn:aws:s3:::${BucketPrefix}-sam-matching-out-sqs-${Environment}'
                   - !Sub 'arn:aws:s3:::${BucketPrefix}-sam-matching-out-runs-${Environment}'
 
+  # Lambda function to configure S3 notifications on existing buckets
   S3NotificationConfiguratorFunction:
     Type: AWS::Lambda::Function
     Properties:
@@ -146,7 +141,7 @@ Resources:
                       'Message': str(e)
                   })
 
-  # Lambda permission for JSON processor to be invoked by S3
+  # Lambda permissions for S3 to invoke functions
   JsonProcessorS3Permission:
     Type: AWS::Lambda::Permission
     Properties:
@@ -155,7 +150,6 @@ Resources:
       Principal: s3.amazonaws.com
       SourceArn: !Sub 'arn:aws:s3:::${BucketPrefix}-sam-data-in-${Environment}'
 
-  # Lambda permission for user report generator to be invoked by S3
   UserReportS3Permission:
     Type: AWS::Lambda::Permission
     Properties:
@@ -164,7 +158,6 @@ Resources:
       Principal: s3.amazonaws.com
       SourceArn: !Sub 'arn:aws:s3:::${BucketPrefix}-sam-matching-out-sqs-${Environment}'
 
-  # Lambda permission for web report generator to be invoked by S3
   WebReportS3Permission:
     Type: AWS::Lambda::Permission
     Properties:
@@ -173,7 +166,7 @@ Resources:
       Principal: s3.amazonaws.com
       SourceArn: !Sub 'arn:aws:s3:::${BucketPrefix}-sam-matching-out-runs-${Environment}'
 
-  # Configure S3 notification for sam-data-in bucket (triggers JSON processor)
+  # Custom resources to configure S3 notifications
   SamDataInBucketNotification:
     Type: Custom::S3Notification
     Properties:
@@ -190,7 +183,6 @@ Resources:
         }
     DependsOn: JsonProcessorS3Permission
 
-  # Configure S3 notification for sam-extracted-json-resources bucket (triggers SQS)
   SamExtractedJsonResourcesBucketNotification:
     Type: Custom::S3Notification
     Properties:
@@ -209,7 +201,6 @@ Resources:
         - QueueArn: !Ref SqsSamJsonMessagesQueueArn
     DependsOn: SqsQueuePolicy
 
-  # Configure S3 notification for sam-matching-out-sqs bucket (triggers user report)
   SamMatchingOutSqsBucketNotification:
     Type: Custom::S3Notification
     Properties:
@@ -236,7 +227,6 @@ Resources:
         }
     DependsOn: UserReportS3Permission
 
-  # Configure S3 notification for sam-matching-out-runs bucket (triggers web report)
   SamMatchingOutRunsBucketNotification:
     Type: Custom::S3Notification
     Properties:
