feat: uncomment S3EventNotificationsStack in master template
- Re-enabled S3 event notifications stack definition
- Lambda notifications configured manually via AWS CLI
- SQS notification for sam-extracted-json-resources requires KMS investigation

Configured notifications:
- sam-data-in → sam-json-processor Lambda
- sam-matching-out-sqs → sam-produce-user-report Lambda
- sam-matching-out-runs → sam-produce-web-reports Lambda

Note: sam-extracted-json-resources → SQS notification blocked by
KMS encryption validation issue. Needs customer-managed KMS key.

--- a/cloudformation/core/master-template.yaml
+++ b/cloudformation/core/master-template.yaml
@@ -163,24 +163,23 @@ Resources:
           Value: 'AI-RFP-Response-Agent'
 
   # S3 Event Notifications Stack
-  # TEMPORARILY DISABLED - Lambda functions are not being created by LambdaFunctionsStack
-  # S3EventNotificationsStack:
-  #   Type: AWS::CloudFormation::Stack
-  #   DependsOn: 
-  #     - LambdaFunctionsStack
-  #     - S3BucketPoliciesStack
-  #     - IAMSecurityPoliciesStack
-  #   Properties:
-  #     TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}services/s3-event-notifications.yaml'
-  #     Parameters:
-  #       Environment: !Ref Environment
-  #       SqsSamJsonMessagesQueueArn: !GetAtt MainInfrastructureStack.Outputs.SqsSamJsonMessagesQueueArn
-  #       BucketPrefix: !Ref BucketPrefix
-  #     Tags:
-  #       - Key: Environment
-  #         Value: !Ref Environment
-  #       - Key: Project
-  #         Value: 'AI-RFP-Response-Agent'
+  S3EventNotificationsStack:
+    Type: AWS::CloudFormation::Stack
+    DependsOn: 
+      - LambdaFunctionsStack
+      - S3BucketPoliciesStack
+      - IAMSecurityPoliciesStack
+    Properties:
+      TemplateURL: !Sub 'https://${TemplatesBucketName}.s3.amazonaws.com/${TemplatesBucketPrefix}services/s3-event-notifications.yaml'
+      Parameters:
+        Environment: !Ref Environment
+        SqsSamJsonMessagesQueueArn: !GetAtt MainInfrastructureStack.Outputs.SqsSamJsonMessagesQueueArn
+        BucketPrefix: !Ref BucketPrefix
+      Tags:
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Project
+          Value: 'AI-RFP-Response-Agent'
 
   # CloudFront UI Distribution Stack
   CloudFrontUIStack:
