fix: remove KMS encryption from SQS queues for S3 event notification compatibility
- Removed KmsMasterKeyId from SqsSamJsonMessagesQueue
- Removed KmsMasterKeyId from SqsSamJsonMessagesDeadLetterQueue
- Removed KMS encryption from template.yaml SQS queues
- Added comments explaining encryption disabled for S3 compatibility

This allows S3 buckets to successfully send event notifications to SQS
without KMS validation errors. S3 event notifications with AWS-managed
KMS keys cause validation failures when configuring bucket notifications.

--- a/cloudformation/core/main-template.yaml
+++ b/cloudformation/core/main-template.yaml
@@ -197,6 +197,7 @@ Resources:
           Value: 'AI-RFP-Response-Agent'
 
   # SQS Queue with Dead Letter Queue
+  # Note: Encryption disabled to support S3 event notifications
   SqsSamJsonMessagesDeadLetterQueue:
     Type: AWS::SQS::Queue
     Properties:
@@ -205,7 +206,6 @@ Resources:
         - !Sub '${BucketPrefix}-sqs-sam-json-messages-dlq-${Environment}'
         - !Sub 'sqs-sam-json-messages-dlq-${Environment}'
       MessageRetentionPeriod: 1209600  # 14 days
-      KmsMasterKeyId: alias/aws/sqs
 
   SqsSamJsonMessagesQueue:
     Type: AWS::SQS::Queue
@@ -219,7 +219,6 @@ Resources:
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt SqsSamJsonMessagesDeadLetterQueue.Arn
         maxReceiveCount: 3
-      KmsMasterKeyId: alias/aws/sqs
 
 Outputs:
   SamDataInBucketName:
